chap05-service/kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort  # 서비스 유형 Node Port
  ports:
  - port: 80      # 서비스 내부 클러스터 IP의 포트
    targetPort: 8080  # 서비스 대상 파드의 포트
    nodePort: 30123   # 각 클러스터 노드의 30123 포트로 서비스에 액세스 가능. 생략하면 k8s가 임의 선택.
  selector:
    app: kubia
